# projectMLinCV

./: Dockerfile  README.md  pre-commit-hook.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py  streamlitapp.py  test_image.py  test_regression.py  utils.py  yolov5_tflite_folder_of_images_inference.py  yolov5_tflite_image_inference.py  yolov5_tflite_inference.py  yolov5_tflite_video_inference.py  yolov5_tflite_webcam_inference.py
.github/workflows/: ci.yml  lint.yml
22_yolov5s_new/: streamlitapp.py  utils.py  yolov5_tflite_image_inference.py  yolov5_tflite_inference.py  yolov5_tflite_video_inference.py  yolov5_tflite_webcam_inference.py
projectMLinCV.egg-info/: PKG-INFO  SOURCES.txt
projectmlincv/: demo.py  requirements.txt  utils.py
tests/: test_image.py  test_regression.py
